--- a/.github/workflows/wheels_cibuildwheel.yml
+++ b/.github/workflows/wheels_cibuildwheel.yml
@@ -16,7 +16,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, macos-13, macos-14, windows-2022]
+        # Temporarily only macOS for testing
+        os: [macos-13]
+        # os: [ubuntu-22.04, macos-13, macos-14, windows-2022]
 
     steps:
       - uses: actions/checkout@v4
