--- a/cxx_wrapper/CMakeLists.txt
+++ b/cxx_wrapper/CMakeLists.txt
@@ -8,40 +8,63 @@ target_link_libraries(
         Eigen3::Eigen
 )
 
+# -----------------------------------------------------------------------------
 # Link Boost libraries
-# Modern Boost (1.70+) is mostly header-only, but filesystem, timer, etc. still need linking
+# Modern Boost (1.70+) is mostly header-only, but filesystem, timer, etc. still
+# need linking
 if(TARGET Boost::headers)
-    # Modern Boost CONFIG mode (1.70+)
-    # Need to manually find and link non-header-only libraries
-    target_link_libraries(${PROJECT_NAME} PRIVATE Boost::headers)
+  # Modern Boost CONFIG mode (1.70+)
+  # Need to manually find and link non-header-only libraries
+  target_link_libraries(${PROJECT_NAME} PRIVATE Boost::headers)
 
-    # Find Boost library directory
-    find_library(BOOST_FILESYSTEM_LIB NAMES boost_filesystem PATHS ${Boost_LIBRARY_DIRS})
-    find_library(BOOST_SYSTEM_LIB NAMES boost_system PATHS ${Boost_LIBRARY_DIRS})
+  # Find Boost library directory - search in system paths and Boost_LIBRARY_DIRS
+  find_library(BOOST_FILESYSTEM_LIB
+    NAMES boost_filesystem libboost_filesystem
+    PATHS ${Boost_LIBRARY_DIRS} /usr/lib64 /usr/lib /usr/local/lib
+    PATH_SUFFIXES boost169
+  )
+  find_library(BOOST_SYSTEM_LIB
+    NAMES boost_system libboost_system
+    PATHS ${Boost_LIBRARY_DIRS} /usr/lib64 /usr/lib /usr/local/lib
+    PATH_SUFFIXES boost169
+  )
 
-    if(BOOST_FILESYSTEM_LIB)
-        target_link_libraries(${PROJECT_NAME} PRIVATE ${BOOST_FILESYSTEM_LIB})
-    endif()
-    if(BOOST_SYSTEM_LIB)
-        target_link_libraries(${PROJECT_NAME} PRIVATE ${BOOST_SYSTEM_LIB})
-    endif()
+  if(BOOST_FILESYSTEM_LIB)
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${BOOST_FILESYSTEM_LIB})
+    message(STATUS "Linked Boost filesystem: ${BOOST_FILESYSTEM_LIB}")
+  endif()
+  if(BOOST_SYSTEM_LIB)
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${BOOST_SYSTEM_LIB})
+    message(STATUS "Linked Boost system: ${BOOST_SYSTEM_LIB}")
+  endif()
 elseif(TARGET Boost::boost)
-    # Alternative modern Boost target
-    target_link_libraries(${PROJECT_NAME} PRIVATE Boost::boost)
+  # Alternative modern Boost target
+  target_link_libraries(${PROJECT_NAME} PRIVATE Boost::boost)
 
-    # Still need to link non-header-only libraries
-    find_library(BOOST_FILESYSTEM_LIB NAMES boost_filesystem PATHS ${Boost_LIBRARY_DIRS})
-    find_library(BOOST_SYSTEM_LIB NAMES boost_system PATHS ${Boost_LIBRARY_DIRS})
+  # Still need to link non-header-only libraries
+  find_library(BOOST_FILESYSTEM_LIB
+    NAMES boost_filesystem libboost_filesystem
+    PATHS ${Boost_LIBRARY_DIRS} /usr/lib64 /usr/lib /usr/local/lib
+    PATH_SUFFIXES boost169
+  )
+  find_library(BOOST_SYSTEM_LIB
+    NAMES boost_system libboost_system
+    PATHS ${Boost_LIBRARY_DIRS} /usr/lib64 /usr/lib /usr/local/lib
+    PATH_SUFFIXES boost169
+  )
 
-    if(BOOST_FILESYSTEM_LIB)
-        target_link_libraries(${PROJECT_NAME} PRIVATE ${BOOST_FILESYSTEM_LIB})
-    endif()
-    if(BOOST_SYSTEM_LIB)
-        target_link_libraries(${PROJECT_NAME} PRIVATE ${BOOST_SYSTEM_LIB})
-    endif()
+  if(BOOST_FILESYSTEM_LIB)
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${BOOST_FILESYSTEM_LIB})
+    message(STATUS "Linked Boost filesystem: ${BOOST_FILESYSTEM_LIB}")
+  endif()
+  if(BOOST_SYSTEM_LIB)
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${BOOST_SYSTEM_LIB})
+    message(STATUS "Linked Boost system: ${BOOST_SYSTEM_LIB}")
+  endif()
 else()
-    # Legacy Boost with components (pre-1.70 or FindBoost module)
-    target_link_libraries(
+  # Legacy Boost with components (pre-1.70 or FindBoost module)
+  # This is used on Linux manylinux with boost169
+  target_link_libraries(
         ${PROJECT_NAME}
         PRIVATE
             Boost::date_time
@@ -52,6 +75,7 @@ else()
             Boost::timer
             Boost::chrono
     )
+  message(STATUS "Using legacy Boost component targets")
 endif()
 
 target_include_directories(
