--- a/.github/workflows/wheels_cibuildwheel.yml
+++ b/.github/workflows/wheels_cibuildwheel.yml
@@ -58,7 +58,10 @@ jobs:
 
           # Install build dependencies before building
           # manylinux2014 uses CentOS 7, need EPEL for some packages
+          # CentOS 7 is EOL - use vault mirrors
           CIBW_BEFORE_BUILD_LINUX: |
+            sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
+            sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
             yum install -y epel-release
             yum install -y boost169-devel eigen3-devel git
             # Create symlinks for boost169
