--- a/.github/workflows/wheels_cibuildwheel.yml
+++ b/.github/workflows/wheels_cibuildwheel.yml
@@ -72,7 +72,9 @@ jobs:
 
           # Set environment variables for Linux builds
           CIBW_ENVIRONMENT_LINUX: >
-            BOOST_ROOT=/usr/include/boost169
+            BOOST_ROOT=/usr
+            BOOST_INCLUDEDIR=/usr/include/boost169
+            BOOST_LIBRARYDIR=/usr/lib64/boost169
             Boost_INCLUDE_DIR=/usr/include/boost169
             Boost_LIBRARY_DIRS=/usr/lib64/boost169
 
